# hw_python_oop

./: homework.py  pyproject.toml
tests/: test_homework.py
