[tool.poetry]
name = "hw-python-oop"
version = "0.1.0"
description = ""
authors = ["Бато Ширапов <batosirapov94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
attrs = "^23.1.0"
iniconfig = "^2.0.0"
mccabe = "^0.7.0"
packaging = "^23.2"
pluggy = "^1.3.0"
py = "^1.11.0"
pycodestyle = "^2.11.1"
pyflakes = "^3.1.0"
pyparsing = "^3.1.1"
pytest = "^7.4.2"
tomli = "^2.0.1"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
